# did-manager

./: Cargo.toml  README.md  coverage.sh
common/: Cargo.toml
consumer/: Cargo.toml  README.md
consumer/src/: lib.rs  resolver.rs
consumer/src/did_jwk/: mod.rs
consumer/src/did_key/: mod.rs
consumer/src/did_web/: mod.rs
did_jwk/: Cargo.toml  README.md
did_jwk/src/: consumer.rs  producer.rs
did_jwk/src/consumer/: mod.rs
did_jwk/src/producer/: mod.rs
did_key/: Cargo.toml  README.md
did_key/src/: consumer.rs  producer.rs
did_key/src/consumer/: mod.rs
did_key/src/producer/: mod.rs
did_web/: Cargo.toml  README.md
did_web/src/: consumer.rs  producer.rs
did_web/src/consumer/: mod.rs
did_web/src/producer/: mod.rs
producer/: Cargo.toml
producer/src/: did_document.rs  lib.rs  oid4vc_core.rs  secret_manager.rs  signature.rs
shared/: Cargo.toml
shared/src/: lib.rs  test_utils.rs
src/: lib.rs
