[workspace]
resolver = "2"
members = ["consumer", "did_jwk", "did_key", "did_web", "producer", "shared"]

[workspace.package]
homepage = "https://www.impierce.com/"
license = "Apache-2.0"
repository = "https://github.com/impierce/did-manager"
rust-version = "1.75"

[workspace.dependencies]
# TODO: temporarily pin until https://github.com/iotaledger/identity.rs/pull/1303 is merged
identity_iota = { git = "https://github.com/iotaledger/identity.rs.git", rev = "b424d3d" }
identity_stronghold = { git = "https://github.com/iotaledger/identity.rs.git", rev = "b424d3d" }
iota-sdk = { version = "1.0", features = ["stronghold"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
