[package]
name = "consumer"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
did_jwk = { path = "../did_jwk" }
did_key = { path = "../did_key" }
did_web = { path = "../did_web" }
identity_iota.workspace = true
iota-sdk.workspace = true
signature.workspace = true
tokio.workspace = true
