[package]
name = "did_jwk"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
did-jwk-extern = { version = "0.1.1", package = "did-jwk" }
#identity_iota.workspace = true
identity_iota = { version = "1.1.0", features = ["memstore"] }
identity_stronghold.workspace = true
iota-sdk.workspace = true
ssi-dids = "0.1.1"
tokio.workspace = true

[dev-dependencies]
iota-crypto = { version = "0.23", default-features = false, features = [
    "ed25519",
] }
iota_stronghold = { version = "2.0" }
rand = "0.8.5"
