[package]
name = "did_key"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
did-key-extern = { version = "0.2.1", package = "did-key" } # https://github.com/decentralized-identity/did-key.rs
did-method-key = "0.2.2"                                    # https://github.com/spruceid/ssi/tree/main/did-key
# identity_iota.workspace = true
identity_iota = { version = "1.1.0", features = ["memstore"] }
identity_stronghold.workspace = true
iota-sdk.workspace = true
jsonwebkey = "0.3.5"
serde_json = "1.0"
ssi-dids = "0.1.1"
ssi-jwk = "0.1.2"
tokio.workspace = true

[dev-dependencies]
iota-crypto = { version = "0.23", default-features = false, features = [
    "ed25519",
] }
iota_stronghold = { version = "2.0" }
rand = "0.8.5"
