[package]
name = "did_web"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
did-web-extern = { version = "0.2.2", package = "did-web" }
# TODO: https://github.com/iotaledger/identity.rs/issues/1299
identity_iota = { git = "https://github.com/iotaledger/identity.rs.git", rev = "4635a47", features = [
    "memstore",
] }
serde_json = "1.0"
ssi-dids = "0.1.1"
tokio.workspace = true

[dev-dependencies]
wiremock = "0.5"
