[package]
name = "did_web"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
shared = { path = "../shared" }
did-web-extern = { version = "0.2.2", package = "did-web" }
identity_iota.workspace = true
identity_stronghold.workspace = true
iota-sdk.workspace = true
log.workspace = true
serde_json = "1.0"
ssi-dids = "0.1.1"
ssi-jwk = "0.1.2"
tokio.workspace = true
url = "2.5"
urlencoding = "2.1"

[dev-dependencies]
iota_stronghold = { version = "2.0" }
rand = "0.8.5"
shared = { path = "../shared", features = ["test"] }
# iota-crypto = { version = "0.23", default-features = false, features = [
#     "ed25519",
# ] }
wiremock = "0.5"
