[package]
name = "producer"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
did_jwk = { path = "../did_jwk" }
did_key = { path = "../did_key" }
did_web = { path = "../did_web" }
shared = { path = "../shared" }

anyhow = "1.0"
async-trait = "0.1"
base64-url = "2.0"
futures = "0.3"
hex = "0.4"
identity_iota.workspace = true
identity_stronghold.workspace = true
iota-sdk.workspace = true
iota_stronghold = { version = "2.0" }
log = "0.4"
oid4vc-core = { git = "https://git@github.com/impierce/openid4vc.git", rev = "3fb6045" }
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
signature.workspace = true
tokio.workspace = true
url = "2.5"

[dev-dependencies]
# shared = { path = "../shared", features = ["test"] }
tokio.workspace = true
